refactor(customer): migrate imports